segundo commit, login y registro de usuarios terminado

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
  <head>
     <script src="{% static 'js/jquery-3.4.1.js' %}"> </script>
     <script src="{% static 'js/bootstrap.js' %}"> </script>
-    <link href="{% static % 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static  'css/bootstrap.css' %}" rel="stylesheet">
     {% block head %}
     {% endblock %}
 
@@ -13,7 +13,7 @@
 
  <body>
      <div class="container">
-     <nav class="navbar navbar-expand-1g navbar-light bg-light">
+     <nav id="cont-nav-color" class="navbar navbar-expand-lg col-sm-12">
         <a class="navbar-brand" href="#">Ejemplo</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navegadorContenido"
             aria-controls="navegadorContenido" aria-expanded="false" aria-label="Navegacion">
@@ -25,12 +25,7 @@
                 <li class="nav-item mx-2">
                   <a class="nav-link" href="{% url 'gestion_usuario:index' %}">Inicio</a>
                 </li>
-                <li class="nav-item mx-2">
-                  <a class="nav-link" href="{% url 'gestion_usuario:servicios' %}">Servicios</a>
-                </li>
-                <li class="nav-item mx-2">
-                  <a class="nav-link" href="{% url 'gestion_usuario:contacto' %}">Contacto</a>
-                </li>
+                
                 <li class="nav-item mx-1">
                   <a class="nav-link" href="{% url 'gestion_usuario:login' %}">Iniciar_sesión</a>
                 </li>
@@ -40,9 +35,6 @@
               {% else %}
                 <li class="nav-item mx-1">
                   <a class="nav-link" href="{% url 'gestion_usuario:index' %}">{{ user.username }}</a>
-                </li>
-                <li class="nav-item mx-1">
-                  <a class="nav-link"  href="{% url 'gestion_usuario:listar_servicios' %}">Servicios</a>
                 </li>
                 <li class="nav-item mx-1">
                   <a class="nav-link" href="{% url 'gestion_usuario:logout' %}">Cerrar_sesión</a>
